trunk/Archive2/05/7ea1a42eaebfb3/output
clang version 3.4.2 (tags/RELEASE_342/final 216574)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:3:8: error: virtual function 'Base::f' has more than one final overrider in 'Middle<Derived, A, B>'
struct Middle
       ^
main.cpp:28:3: note: in instantiation of template class 'Middle<Derived, A, B>' requested here
: Middle<Derived, A, B>
  ^
main.cpp:13:19: note: overridden virtual function is here
    virtual Base *f() const = 0;
                  ^
main.cpp:19:16: note: final overrider of 'Base::f' in 'A'
    virtual A *f() const override = 0;
               ^
main.cpp:24:16: note: final overrider of 'Base::f' in 'B'
    virtual B *f() const override = 0;
               ^
main.cpp:30:22: error: 'f' marked 'override' but does not override any member functions
    virtual Derived *f() const override = 0;
                     ^
2 errors generated.
